--- a/doc/otsdaq_mu2e.org
+++ b/doc/otsdaq_mu2e.org
@@ -111,7 +111,8 @@ to set the debug level for DTC.cpp and then looking at the output with
 tshow | less
 #+end_src 
 
-DTC.cpp is the source file name ... 
+According to Andy, DTC.cpp is the source file name. Does this mean that the control 
+is at source file level ?
 
 * general info                                                               
 
@@ -123,6 +124,37 @@ DTC.cpp is the source file name ...
   'ARTDAQSupervisor'    output into /home/mu2etrk/test_stand/pasha_011/srcs/otsdaq_mu2e_config/Data_tracker/Logs/otsdaq_quiet_run-mu2edaq09.fnal.gov-3066.txt
   'SlowControlsContext' output into /home/mu2etrk/test_stand/pasha_011/srcs/otsdaq_mu2e_config/Data_tracker/Logs/otsdaq_quiet_run-mu2edaq09.fnal.gov-3068.txt
 
-*
+* configuration                                                              
+
+  assume user (partition) = tracker
+
+ file:../../otsdaq_mu2e_config/Data_tracker/TableInfo: contains definitions of the configuration tables, in XML
+
+ file:../../otsdaq_mu2e_config/databases_tracker/filesystemdb/test_db 
+
+ For each table, there is a directory where multiple versions of the table are stored in .json format. 
+ For example:
+
+ ARTDAQBoardReaderTable: file:../../otsdaq_mu2e_config/databases_tracker/filesystemdb/test_db/ARTDAQBoardReaderTable
+
+ 
+ in principle, different versions could have different format (number of columns)
+
+ $USER_DATA/ARTDAQConfigurations/daqinterface_settings file is created by file:../../otsdaq/otsdaq/ARTDAQSupervisor/ARTDAQSupervisor.cc
+
+ and then read by python script called from somewhere else: https://github.com/art-daq/artdaq_daqinterface/blob/develop/rc/control/daqinterface.py
+
+
+  boot.txt : created by file:../../otsdaq/otsdaq/ARTDAQSupervisor/ARTDAQSupervisor.cc::/boot.txt/
+
+ XDAQApplicationPropertyTable : advanced_memory_usage
+ XDAQApplicationPropertyTable:
+
+* environment variables used                                                 
+
+             USER_DATA=$MRB_TOP/srcs/otsdaq_mu2e_config/Data_tracker
+ DAQINTERFACE_SETTINGS=$USER_DATA/ARTDAQConfigurations/daqinterface_setting
+
+  note that ARTDAQConfigurations is a *symlink*
 
 * ------------------------------------------------------------------------------
