--- a/doc/otsdaq_mu2e.org
+++ b/doc/otsdaq_mu2e.org
@@ -1,13 +1,14 @@
 #+startup:fold
 * ------------------------------------------------------------------------------
-* OTSDAQ primer: https://otsdaq.fnal.gov/tutorials/first_demo/topics/configuration_primer.html
-* OTSDAQ intro by Ryan : https://docs.google.com/presentation/d/1wzSJMK3fCoW2aZ_sdO1jg0n8WoykJR7MJ1ILqp3kEAI/edit#slide=id.p
-* [[file:build_instructions.org][build instructions]]  : not working yet ! 
-* [[file:xdaq.org][XDAQ]]
-* [[file:hardware.org][Mu2e DAQ hardware]]
-* [[file:trace.org][TRACE]] 
-* [[file:configure_and_run.org][how to configure and run OTSDAQ]]
-* [[file:code_repositories.org][OTS code repositories]]                                                      
-* [[file:otsdaq_terminology.org][OTSDAQ terminology]]                                                         
-* [[file:otsdaq_q_and_a.org][OTSDAQ Q&A]]           
+* Mu2e OTSDAQ docs - top page                                                
+** OTSDAQ primer: https://otsdaq.fnal.gov/tutorials/first_demo/topics/configuration_primer.html
+** OTSDAQ intro by Ryan : https://docs.google.com/presentation/d/1wzSJMK3fCoW2aZ_sdO1jg0n8WoykJR7MJ1ILqp3kEAI/edit#slide=id.p
+** [[file:build_instructions.org][build instructions]]  : not working yet ! 
+** [[file:xdaq.org][XDAQ]]
+** [[file:hardware.org][Mu2e DAQ hardware]]
+** [[file:trace.org][TRACE]] 
+** [[file:configure_and_run.org][how to configure and run OTSDAQ]]
+** [[file:code_repositories.org][OTS code repositories]]                                                      
+** [[file:otsdaq_terminology.org][OTSDAQ terminology]]                                                         
+** [[file:otsdaq_q_and_a.org][OTSDAQ Q&A]]           
 * ------------------------------------------------------------------------------
