--- a/doc/hardware.org
+++ b/doc/hardware.org
@@ -2,6 +2,7 @@
 # this section describes the hardware configuration
 # of the Mu2e DAQ. at this point - just beginning
 #------------------------------------------------------------------------------
+* [[https://mu2e-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=19095][mu2e-19095]] : Mu2e beam timing
 * [[https://mu2e-docdb.fnal.gov/cgi-bin/sso/RetrieveFile?docid=37376&filename=20220922_DAQNodes.pdf][mu2e-37376]] : DAQ node configuration in the DAQ room 
 * [[https://mu2e-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=4097][mu2e-4097  :]] DTC user manual 
 * DTC        : two cards per node, mounted as /dev/mu2e0 and /dev/mu2e0           
