--- a/doc/mu2e_build_instructions.org
+++ b/doc/mu2e_build_instructions.org
@@ -4,11 +4,11 @@
    - version   : v2_06_08   
    - qualifiers: e20_s118_prof
 
-  build procedure:
+  the build procedure itself:
 
 #+begin_src 
   wget https://github.com/Mu2e/otsdaq_mu2e_config/mu2e_ots_install_v2.sh
-  source mu2e_ots_install_v2.sh <working_area> partition otsdaq_bundle qualifiers
+  source mu2e_ots_install_v2.sh working_area partition otsdaq_bundle qualifiers
 #+end_src 
 
   - working_area : name of the OTSDAQ working area, to be created in the current directory 
